# asvk_prak

prac_3/: CMakeLists.txt  Factory.hpp  Functions.cpp  Functions.hpp  main.cpp
prac_3/tests/: Arithmetic.cpp  Exponential.cpp  Polynomial.cpp
prac_4/: Crossing.cpp  GeneticAlgo.cpp  GoLEngine.hpp  Mutation.cpp  Selection.cpp  TargetFunc.cpp
prac_4/r/: research_cycle.cpp
